[gd_scene load_steps=9 format=3 uid="uid://bjtkbwi2b87ws"]

[ext_resource type="Script" path="res://Scripts/Tools/Examples/ExampleGame.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/Tools/CameraShake.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://ke83lndodr8n" path="res://Scenes/MainMenu.tscn" id="3"]
[ext_resource type="Script" path="res://Scripts/Tools/StateMachine.gd" id="4"]
[ext_resource type="PackedScene" path="res://Scenes/GameOverlay.tscn" id="5"]
[ext_resource type="Script" path="res://Scripts/Tools/Examples/ExampleMain.gd" id="6"]
[ext_resource type="Script" path="res://Scripts/Tools/Examples/ExampleProcess.gd" id="7"]

[sub_resource type="Environment" id="1"]
background_mode = 4
background_canvas_max_layer = 1
glow_enabled = true
glow_levels/4 = 1.0
glow_intensity = 5.06
glow_strength = 1.42
glow_blend_mode = 1

[node name="Main" type="Node"]
process_mode = 3
editor_description = "Glues process.gd and game.gd together with the game state. Add pause and transition logic here."
script = ExtResource("6")

[node name="GameState" type="Node" parent="."]
process_mode = 3
editor_description = "Handles basic game state like 'Menu', 'Game Running', 'Paused'. Runs while the game is paused. Used in main.gd and glues progess.gd and game.gd together."
script = ExtResource("4")

[node name="Game" type="Node2D" parent="."]
process_mode = 1
editor_description = "Nodes in Game will not run while the game is paused. This affects _process(), _input() and _unhandled_input(). Add game logic, ingame ui, levels and ingame sound here."
script = ExtResource("1")

[node name="EntityContainer" type="Node2D" parent="Game"]

[node name="Camera2D" type="Camera2D" parent="Game"]
current = true
script = ExtResource("2")

[node name="Dummy" type="Polygon2D" parent="Game"]
position = Vector2(11.6237, 10.5366)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-11.6237, -10.5366, -27.6237, 21.4634, 4.37634, 21.4634)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Game"]
environment = SubResource("1")

[node name="Process" type="Node" parent="."]
process_mode = 3
editor_description = "Nodes in Process run while the game is paused. _process(), _input() and _unhandled_input() will always run. Add game state, transitions, menus, menu sounds and music in here. Handles general settings, like fullscreen switching and volume."
script = ExtResource("7")

[node name="GameOverlay" parent="Process" instance=ExtResource("5")]

[node name="TransitionOverlay" type="CanvasLayer" parent="Process"]

[node name="Root" type="ColorRect" parent="Process/TransitionOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MainMenu" parent="Process" instance=ExtResource("3")]
